docker-compose/springcloud-helloworld-aws-ec2-command-cloudformation/ec2-stack.yaml
---
Parameters:

  AvailabilityZone:
    Type: String
    Default: us-east-1a
  AmazonLinux2AMI:
    Type: String
    Default: ami-0b5eea76982371e91

Resources:
  DockerComposeInstance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: !Ref AvailabilityZone
      ImageId: !Ref AmazonLinux2AMI
      InstanceType: t2.micro
      Tags: 
        - Name: springcloud-helloworld-aws-ec2-command-cloudformation
      UserData: 
        Fn::Base64:
          | 
          #!/bin/bash
          yum update -y

          # Install Docker
          amazon-linux-extras install docker -y
          service docker start
          systemctl enable docker
          usermod -a -G docker ec2-user
          chmod 666 /var/run/docker.sock

          # Install Docker Compose
          curl -L https://github.com/docker/compose/releases/download/v2.16.0/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
          chmod +x /usr/local/bin/docker-compose

          # Install git in your EC2 instance
          yum install git -y

          # Clone and run a sample application
          cd ~
          git clone https://github.com/wisniewskikr/chrisblog-it-aws.git
          cd chrisblog-it-aws/docker-compose/springcloud-helloworld-aws-ec2-command-cloudformation
          docker-compose up

      SecurityGroups:
        - !Ref SSHSecurityGroup
        - !Ref GatewaySecurityGroup
        - !Ref HelloWorldSecurityGroup
        - !Ref DiscoverySecurityGroup

  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        ToPort: 22
        IpProtocol: tcp

  GatewaySecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable standard web access
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 8762
          ToPort: 8762
          IpProtocol: tcp
          
  HelloWorldSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable standard web access
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 8080
          ToPort: 8080
          IpProtocol: tcp
          
  DiscoverySecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable standard web access
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 8761
          ToPort: 8761
          IpProtocol: tcp
